# EventDispatcher

./: CMakeLists.txt  README.md
include/: events.h
src/: example.cpp
